--- a/page1/index.html
+++ b/page1/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><head><link rel="canonical" href="http://blog.wighawag.com/"/><meta http-equiv="content-type" content="text/html; charset=utf-8" /><meta http-equiv="refresh" content="0;url=http://blog.wighawag.com/" /></head></html>
+<!DOCTYPE html><html><head><link rel="canonical" href="http://wighawag.com/"/><meta http-equiv="content-type" content="text/html; charset=utf-8" /><meta http-equiv="refresh" content="0;url=http://wighawag.com/" /></head></html>
