--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
         <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/pure/0.6.0/grids-responsive-min.css">
     <!--<![endif]-->
 
-    <link rel="stylesheet" href="http://wighawag.com//css/all.min.css">
+    <link rel="stylesheet" href="http://localhost:1313//css/all.min.css">
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 
-    <link rel="alternate" type="application/rss+xml" title="wighawag" href="http://wighawag.com//index.xml" />
+    <link rel="alternate" type="application/rss+xml" title="wighawag" href="http://localhost:1313//index.xml" />
 </head>
 <body>
 
@@ -44,7 +44,7 @@
     <div class="sidebar pure-u-1 pure-u-md-1-4">
     <div class="header">
         <hgroup>
-            <h1 class="brand-title"><a href="http://wighawag.com/blog/">wighawag</a></h1>
+            <h1 class="brand-title"><a href="http://localhost:1313/blog/">wighawag</a></h1>
             <h2 class="brand-tagline"> Random thoughts and works about code </h2>
         </hgroup>
 
@@ -61,7 +61,7 @@
                 </li>
                 
                 <li class="nav-item">
-                    <a class="pure-button" href="http://wighawag.com//index.xml"><i class="fa fa-rss"></i> rss</a>
+                    <a class="pure-button" href="http://localhost:1313//index.xml"><i class="fa fa-rss"></i> rss</a>
                 </li>
             </ul>
         </nav>
@@ -94,7 +94,7 @@
         </ul>
     </div>
 </div>
-<script src="http://wighawag.com//js/all.min.js"></script>
+<script src="http://localhost:1313//js/all.min.js"></script>
         </div>
     </div>
 </div>
